changes in organizer